<resources>
    <string name="app_name">汇流</string>
    <string name="title_main">慧慧物流</string>
    <string name="title_login">登录</string>
    <string name="title_register">注册</string>
    <string name="title_set">设置</string>
    <string name="title_profile">我的资料</string>
    <string name="title_send">我要发货</string>
    <string name="title_bespeak">预约发货</string>
    <string name="title_search">输入详细地址</string>
    <string name="title_order_list">我的订单</string>
    <string name="title_order_detail">订单详情</string>
    <string name="title_change_order">修改订单</string>
    <string name="title_rule">平台服务使用规则</string>
    <string name="login_tips">为方便司机接您时联系您，请验证手机~</string>
    <string name="phone_number">手机号</string>
    <string name="verify_code">验证码</string>
    <string name="check">验证</string>
    <string name="start">开始</string>
    <string name="send_where">发送货物到哪儿?</string>
    <string name="phone_format_error">手机号码格式错误</string>
    <string name="verify_code_error">验证码错误</string>
    <string name="phone_verify_code">请输入验证码:1234</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="get_code_failed">获取验证码失败</string>
    <string name="quit_next_time">再按一次退出</string>
    <string name="myloc">我在 %1$s 附近</string>
    <string name="pick_time_hint">上门取货时间</string>
    <string name="asterisk">*</string>
    <string name="label_order_code">订单编号：</string>
    <string name="label_order_state">信息状态：</string>
    <string name="label_create_time">订单创建时间：</string>
    <string name="label_pick_time">取货时间：</string>
    <string name="label_goods_name">物品名称：</string>
    <string name="label_goods_type">物品类型：</string>
    <string name="label_goods_value">物品价值：</string>
    <string name="label_goods_weight">物品重量：</string>
    <string name="label_goods_traffic">交通工具：</string>
    <string name="label_goods_pay">愿出金额：</string>
    <string name="label_goods_valid_time">有效时间：</string>
    <string name="label_send_from">发货人：</string>
    <string name="label_send_to">收货人：</string>
    <string name="label_send_phone">手机号码：</string>
    <string name="label_send_comment">重要说明：</string>
    <string name="label_message_free">信息公开：</string>
    <string name="free_yes">免费公开</string>
    <string name="free_no">付费公开</string>
    <string name="unit_kg">千克</string>
    <string name="unit_tons">吨</string>
    <string name="yuan">元</string>
    <string name="zero">0</string>
    <string name="label_driver_name">司机姓名：</string>
    <string name="label_driver_phone">司机电话：</string>
    <string name="label_driver_level">司机等级：</string>
    <string name="label_driver_score">打分分值：</string>
    <string name="label_address_from">发货地：</string>
    <string name="label_address_to">收货地：</string>
    <string name="next_step">下一步</string>
    <string name="publish">立即发布</string>
    <string name="label_portrait">头像：</string>
    <string name="label_name">姓名：</string>
    <string name="label_phone">手机号：</string>
    <string name="label_credit">信用等级：</string>
    <string name="label_id_number">身份证：</string>
    <string name="label_register_time">注册时间：</string>
    <string name="agree_and_accept">同意并接受</string>
    <string name="platform_rule">《平台服务使用规则》</string>
    <string name="rules">平台服务使用规则平台服务使用规则平台服务使用规则平台服务使用规则平台服务使用规则平台服务使用规则平台服务使用规则平台服务使用规则平台服务使用规则</string>
    <string name="send">发货</string>
    <string name="area_hint">地区</string>
    <string name="search_hint">街道 门牌号</string>
    <string name="confirm">确 定</string>
    <string name="cancel">取消</string>
    <string name="confirm_txt">确认</string>
    <string name="request_success">请求成功</string>
    <string name="request_failed">请求失败</string>
    <string name="bespeak_time_format">MM月dd日 HH:mm</string>
    <string name="login">登录</string>
    <string name="login_input_invalid">用户名或者密码中包含非法字符或长度不符合要求，请重新输入</string>
    <string name="login_input_empty">用户名或者密码为空</string>
    <string name="login_input_username_empty">用户名为空</string>
    <string name="login_input_password_empty">密码为空</string>
    <string name="login_input_username_invalid">用户名格式错误</string>
    <string name="login_input_password_invalid">密码格式错误</string>
    <string name="hint_login_username">4-16位中英文、数字、下划线</string>
    <string name="hint_login_password">4-32位英文、数字</string>
    <string name="show">显示</string>
    <string name="hide">隐藏</string>
    <string name="register">注册</string>
    <string name="label_verify_code">验证码：</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="label_password">密码：</string>
    <string name="label_user_type">货源：</string>
    <string name="register_username_empty">手机号为空</string>
    <string name="register_code_empty">验证码为空</string>
    <string name="register_password_empty">密码为空</string>
    <string name="register_username_invalid">手机号格式错误</string>
    <string name="register_code_invalid">验证码格式错误</string>
    <string name="register_password_invalid">密码格式错误</string>
    <string name="register_id_invalid">身份证号码格式错误</string>
    <string name="hint_register_username">请输入手机号码</string>
    <string name="hint_register_code">验证码</string>
    <string name="hint_register_password">请输入密码</string>
    <string name="hint_register_id">请输入身份证号码</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败</string>
    <string name="pick_time_empty">取货时间不能为空</string>
    <string name="goods_name_empty">物品名称不能为空</string>
    <string name="goods_value_empty">物品价值不能为空</string>
    <string name="goods_weight_empty">物品重量不能为空</string>
    <string name="goods_pay_empty">愿出金额不能为空</string>
    <string name="address_from_empty">发货地不能为空</string>
    <string name="address_to_empty">收货地不能为空</string>
    <string name="goods_value_error">物品价值格式错误</string>
    <string name="goods_weight_error">物品重量格式错误</string>
    <string name="goods_pay_error">愿出金额格式错误</string>
    <string name="trunk_type_error">请选择车辆类型</string>
    <string name="send_from_empty">发货人不能为空</string>
    <string name="send_to_empty">收货人不能为空</string>
    <string name="send_phone_empty">手机号码不能为空</string>
    <string name="send_phone_error">手机号码格式错误</string>
    <string name="publish_success">发布成功</string>
    <string name="publish_failed">发布失败</string>
    <string name="continue_send">继续发货</string>
    <string name="change_success">修改成功</string>
    <string name="know">知道了</string>
    <string name="publish_order_message">请保持手机畅通，自由快递人将会尽快联系您收取货物！</string>
    <string name="change_order_message">请保持手机畅通，自由快递人将会尽快联系您收取货物！</string>
    <string name="order_cancel">取消订单</string>
    <string name="order_change">修改订单</string>
    <string name="order_consult">协商退单</string>
    <string name="order_confirm">确认收货</string>
    <string name="order_comment">评价司机</string>
    <string name="star_good">非常好</string>
    <string name="star_normal">一般</string>
    <string name="star_bad">差</string>
    <string name="order_cancel_message">确认要取消订单吗</string>
    <string name="order_consult_message">确认要退单吗，请先与司机协商后再点击确定</string>
    <string name="order_confirm_message">请确认你的货物是否已送达</string>
    <string name="order_comment_message">评价司机</string>
    <string name="grade">评分</string>
    <string name="comment">评论</string>
    <string name="value_yuan">%1$s 元</string>
    <string name="requesting">正在请求，请等待…</string>
    <string name="pull_to_refresh_pull">上拉加载…</string>
    <string name="pull_to_refresh_release">放开以加载…</string>
    <string name="pull_to_refresh_refreshing">正在加载…</string>
    <string name="btn_intro_enter">滴滴一下，带你回家</string>
    <string name="btn_sync_call">马上叫车</string>
    <string name="btn_async_call">预约</string>
    <string name="loc_gps">"请打开GPS开关
以便于司机尽快接到您"</string>
    <string name="loc_network">打开网络定位开关提高定位速度</string>
    <string name="loc_gps_network">"请打开GPS及网络定位开关
以便于司机尽快接到您"</string>
    <string name="map_order_count">%s单</string>
    <string name="call_confirm_title">确认叫车</string>
    <string name="call_confirm_from">从</string>
    <string name="call_confirm_to">到</string>
    <string name="loading_address">位置获取中...</string>
    <string name="toast_has_no_gps_loc">尚未获取到您的地理位置！</string>
    <string name="pop_start_time">%s 出发</string>
    <string name="call_confirm_btn">确认发送</string>
    <string name="async_call_title">预约用车</string>
    <string name="dian">点</string>
    <string name="minute">分</string>
    <string name="set_when_to_start">什么时候出发</string>
    <string name="set_where_to_from">从哪里出发</string>
    <string name="hint_location">你现在在哪儿</string>
    <string name="set_where_to_go">到哪里去</string>
    <string name="date_time_today">今天</string>
    <string name="date_time_tomorrow">明天</string>
    <string name="date_time_after_tomorrow">后天</string>
    <string name="date_time_after_date">%1$s月%2$s日</string>
    <string name="recall_title">重发订单</string>
    <string name="recall_cancel_order">取消订单</string>
    <string name="recall_resend">重发</string>
    <string name="recall_wait">等待</string>
    <string name="want_to_rise_price">愿加小费：</string>
    <string name="price_rise">%s元</string>
    <string name="pop_replay">重听</string>
    <string name="wait_answer_title">等待抢单</string>
    <string name="has_been_sent_to">已通知</string>
    <string name="how_many_cars">辆车</string>
    <string name="need_to_wait">等待</string>
    <string name="how_many_seconds" />
    <string name="price_rise_tips">暂无司机应答，高峰或者偏远地区建议加点小费哦~</string>
    <string name="get_order_info_failed">订单创建失败，请重试!</string>
    <string name="async_call_data_failed">起终点数据不完整！</string>
    <string name="async_call_pos_failed">出发地和目的地不能相同！</string>
    <string name="async_call_time_failed">请选择出发时间！</string>
    <string name="async_get_from_loc">正在获取出发地经纬度</string>
    <string name="async_get_to_loc">正在获取目的地经纬度</string>
    <string name="async_loc_start_failed">获取出发地经纬度失败</string>
    <string name="async_loc_end_failed">获取目的地经纬度失败</string>
    <string name="async_start_end_too_close">目的地和出发地的距离太近</string>
    <string name="async_call_sel_city">"选择
城市"</string>
    <string name="async_call_sel_city_first">请先选择城市！</string>
    <string name="async_recall_wait">出发前将持续寻找司机，如遇特殊情况，请取消订单~</string>
    <string name="async_recall_cancel">确定要取消您的预约订单吗？</string>
    <string name="current_order">马上叫车</string>
    <string name="book_order">预约</string>
    <string name="exmaple_text">例：我在万达，要去机场</string>
    <string name="last_second_notice">还剩%d秒</string>
    <string name="time_press_btn_notice">"按住按钮录音
才能语音叫车"</string>
    <string name="time_too_short_notice">时间过短</string>
    <string name="up_to_finish">松开结束</string>
    <string name="wait_for_driver">等待接驾</string>
    <string name="finish_order_content">结束订单</string>
    <string name="meter">公里</string>
    <string name="minutes">分钟</string>
    <string name="get_on_car">我已上车</string>
    <string name="notice_top">提示</string>
    <string name="if_car_arrival">未上车之前确认，可能会给您带来司机爽约风险~</string>
    <string name="search">搜索</string>
    <string name="my_order">我的订单</string>
    <string name="share_to_friends">告诉好友</string>
    <string name="setting">设置</string>
    <string name="login_string">登录</string>
    <string name="login_title">验证手机</string>
    <string name="correct_code">请输入正确的验证码</string>
    <string name="phone_number_count">请输入11位手机号码</string>
    <string name="phone_type_error">手机格式不正确</string>
    <string name="wait_logining">正在登录请稍候...</string>
    <string name="second">秒</string>
    <string name="net_failed">网络异常，请检查网络~</string>
    <string name="login_timeout">您可能在其他设备上登录或登录过期了，重新登录一下吧：）</string>
    <string name="time_to_go">距离出发还有</string>
    <string name="orders">我的订单</string>
    <string name="finish_text">已完成订单</string>
    <string name="evaluated">已评价</string>
    <string name="unevaluated">未评价</string>
    <string name="wait_go">待出发</string>
    <string name="dan">%s单</string>
    <string name="waiting">等待中</string>
    <string name="communation_resolved">与司机达成一致，取消订单</string>
    <string name="bad_attitude">态度恶劣</string>
    <string name="detour">绕路</string>
</resources>