<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/order_detail_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp" >

        <Button
            android:id="@+id/order_detail_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/order_cancel"
            android:visibility="gone" />

        <Button
            android:id="@+id/order_detail_change"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/order_change"
            android:visibility="gone" />

        <Button
            android:id="@+id/order_detail_consult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/order_consult"
            android:visibility="gone" />

        <Button
            android:id="@+id/order_detail_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/order_confirm"
            android:visibility="gone" />

        <Button
            android:id="@+id/order_detail_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/order_comment"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>