<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background" >

    <include
        android:id="@+id/register_titlebar"
        layout="@layout/titlebar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/register_titlebar"
        android:layout_marginLeft="@dimen/login_marginLeft"
        android:layout_marginRight="@dimen/login_marginRight"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_round_rect"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/login_itemHeight"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/WuLiu.Label"
                    android:text="@string/label_phone" />

                <com.wuliu.client.view.ClearEditText
                    android:id="@+id/register_phone"
                    style="@style/WuLiu.EditText.ClearEditText"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="5dp"
                    android:maxLength="16" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/line_height"
                android:background="@color/line_light" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/login_itemHeight"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/WuLiu.Label"
                    android:text="@string/label_verify_code" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

                    <Button
                        android:id="@+id/register_get_code"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        style="@style/Register_Code_Button"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true" />

                    <com.wuliu.client.view.ClearEditText
                        android:id="@+id/register_code"
                        style="@style/WuLiu.EditText.ClearEditText"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_toLeftOf="@id/register_get_code"
                        android:maxLength="32" />
                </RelativeLayout>
            </LinearLayout>
            
            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/line_height"
                android:background="@color/line_light" />
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/login_itemHeight"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/WuLiu.Label"
                    android:text="@string/label_password" />

                <com.wuliu.client.view.ClearEditText
                    android:id="@+id/register_password"
                    style="@style/WuLiu.EditText.ClearEditText"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="5dp"
                    android:maxLength="16" />
            </LinearLayout>
            
            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/line_height"
                android:background="@color/line_light" />
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/login_itemHeight"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/WuLiu.Label"
                    android:text="@string/label_id" />

                <com.wuliu.client.view.ClearEditText
                    android:id="@+id/register_id"
                    style="@style/WuLiu.EditText.ClearEditText"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="5dp"
                    android:maxLength="16" />
            </LinearLayout>
            
            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/line_height"
                android:background="@color/line_light" />
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/login_itemHeight"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/WuLiu.Label"
                    android:text="@string/label_user_type" />

                <TextView
                    android:id="@+id/register_user_type"
                    style="@style/Send_Item_Value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:drawablePadding="5dp"
                    android:drawableRight="@drawable/arrow_right" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/register_submit"
            style="@style/Login_Submit"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/login_itemHeight"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_default"
            android:text="@string/register" />
    </LinearLayout>
    
</RelativeLayout>